generated-out/vanilla/dear-imgui-raw-vanilla/cbits/DearImGuiWrappers.h

void ImDrawList__PathArcToFastEx_wrap(ImDrawList* self, ImVec2 const* center, float radius, int a_min_sample, int a_max_sample, int a_step);
void ImDrawList__PathArcToN_wrap(ImDrawList* self, ImVec2 const* center, float radius, float a_min, float a_max, int num_segments);
void ImDrawList__SetTexture_wrap(ImDrawList* self, ImTextureRef const* tex_ref);
void ImGui_PlotHistogramCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);
void ImGui_PlotLinesCallback_wrap(const char* label, float (*values_getter)(void* data, int idx), void* data, int values_count, int values_offset, const char* overlay_text, float scale_min, float scale_max, ImVec2 const* graph_size);