generated-out/docking/dear-imgui-raw-docking/src/DearImGui/Raw.hsc

{-# LANGUAGE CApiFFI #-}
{-# LANGUAGE PatternSynonyms #-}
{-# OPTIONS_GHC -Wno-unused-imports #-}

-- This file was generated by dear-bindings-ffi. Do not edit by hand.
-- Haskell function names: lower the first character of the C name.
-- e.g. ImGui_Begin -> imGui_Begin

module DearImGui.Raw where

import Foreign.C.String (CString)
import Foreign.C.Types
import Foreign.Marshal.Alloc (alloca)
import Foreign.Marshal.Utils (with)
import Foreign.Ptr (FunPtr, Ptr)
import Foreign.Storable (Storable (..))
import Data.Int (Int8, Int16, Int32, Int64)
import Data.Word (Word8, Word16, Word32, Word64)
import DearImGui.Raw.Types

#include "dcimgui_nodefaultargfunctions.h"

-- functions

-- C: int _CalcCircleAutoSegmentCount(const ImDrawList* self, float radius)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList__CalcCircleAutoSegmentCount"
  imDrawList__CalcCircleAutoSegmentCount :: (Ptr ImDrawList) -> CFloat -> IO CInt
-- C: void _ClearFreeMemory(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList__ClearFreeMemory"
  imDrawList__ClearFreeMemory :: (Ptr ImDrawList) -> IO ()
-- C: void _OnChangedClipRect(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList__OnChangedClipRect"
  imDrawList__OnChangedClipRect :: (Ptr ImDrawList) -> IO ()
-- C: void _OnChangedTexture(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList__OnChangedTexture"
  imDrawList__OnChangedTexture :: (Ptr ImDrawList) -> IO ()
-- C: void _OnChangedVtxOffset(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList__OnChangedVtxOffset"
  imDrawList__OnChangedVtxOffset :: (Ptr ImDrawList) -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImDrawList__PathArcToFastEx_wrap"
  c_imDrawList__PathArcToFastEx :: (Ptr ImDrawList) -> (Ptr ImVec2) -> CFloat -> CInt -> CInt -> CInt -> IO ()

imDrawList__PathArcToFastEx :: (Ptr ImDrawList) -> ImVec2 -> CFloat -> CInt -> CInt -> CInt -> IO ()
imDrawList__PathArcToFastEx self center radius a_min_sample a_max_sample a_step =
  with center $ \_p1 -> c_imDrawList__PathArcToFastEx self _p1 radius a_min_sample a_max_sample a_step

foreign import capi unsafe "DearImGuiWrappers.h ImDrawList__PathArcToN_wrap"
  c_imDrawList__PathArcToN :: (Ptr ImDrawList) -> (Ptr ImVec2) -> CFloat -> CFloat -> CFloat -> CInt -> IO ()

imDrawList__PathArcToN :: (Ptr ImDrawList) -> ImVec2 -> CFloat -> CFloat -> CFloat -> CInt -> IO ()
imDrawList__PathArcToN self center radius a_min a_max num_segments =
  with center $ \_p1 -> c_imDrawList__PathArcToN self _p1 radius a_min a_max num_segments

-- C: void _PopUnusedDrawCmd(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList__PopUnusedDrawCmd"
  imDrawList__PopUnusedDrawCmd :: (Ptr ImDrawList) -> IO ()
-- C: void _ResetForNewFrame(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList__ResetForNewFrame"
  imDrawList__ResetForNewFrame :: (Ptr ImDrawList) -> IO ()
-- C: void _SetDrawListSharedData(ImDrawList* self, ImDrawListSharedData* data)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList__SetDrawListSharedData"
  imDrawList__SetDrawListSharedData :: (Ptr ImDrawList) -> (Ptr ImDrawListSharedData) -> IO ()
foreign import capi unsafe "DearImGuiWrappers.h ImDrawList__SetTexture_wrap"
  c_imDrawList__SetTexture :: (Ptr ImDrawList) -> (Ptr ImTextureRef) -> IO ()

imDrawList__SetTexture :: (Ptr ImDrawList) -> ImTextureRef -> IO ()
imDrawList__SetTexture self tex_ref =
  with tex_ref $ \_p1 -> c_imDrawList__SetTexture self _p1

-- C: void _TryMergeDrawCmds(ImDrawList* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImDrawList__TryMergeDrawCmds"
  imDrawList__TryMergeDrawCmds :: (Ptr ImDrawList) -> IO ()
-- C: const char* c_str(const ImGuiTextBuffer* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiTextBuffer_c_str"
  imGuiTextBuffer_c_str :: (Ptr ImGuiTextBuffer) -> IO CString
-- C: bool empty(const ImGuiTextFilter_ImGuiTextRange* self)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiTextFilter_ImGuiTextRange_empty"
  imGuiTextFilter_ImGuiTextRange_empty :: (Ptr ImGuiTextFilter_ImGuiTextRange) -> IO CBool
-- C: void split(const ImGuiTextFilter_ImGuiTextRange* self, char separator, ImVector_ImGuiTextRange* out)
foreign import capi unsafe "dcimgui_nodefaultargfunctions.h ImGuiTextFilter_ImGuiTextRange_split"
  imGuiTextFilter_ImGuiTextRange_split :: (Ptr ImGuiTextFilter_ImGuiTextRange) -> CChar -> (Ptr ImVector_ImGuiTextRange) -> IO ()
